--- a/videojuegos/index.html
+++ b/videojuegos/index.html
@@ -6,16 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videojuegos</title>
+    <link rel="stylesheet" href="estilos.css" type="text/css">
 </head>
 
 <body>
     <h1>Videojuegos</h1>
     <p>Estas son algunas de las plataformas donde puedes encontrar diversos videojuegos.</p>
-    <ol>
-        <li><a href="xbox.html">Xbox</a></li>
-        <li><a href="play.html">PlayStation</a></li>
-        <li><a href="pc.html">Pc</a></li>
-    </ol>
+
+    <table style="margin-left:auto;margin-right:auto;"></table>
+    <table border="1">
+        <p>En este caso opinaré sobre los videojuegos de tres plataformas:</p>
+        <tr>
+            <th>Plataformas</th>
+        </tr>
+        <tr>
+            <td><a href="xbox.html">Xbox</a></td>
+        </tr>
+        <tr>
+            <td><a href="play.html">PlayStation</a></td>
+        </tr>
+        <tr>
+            <td><a href="pc.html">PC</a></td>
+        </tr>
+    </table>
 </body>
 
 </html>
