--- a/videojuegos/pc.html
+++ b/videojuegos/pc.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pc</title>
+    <link rel="stylesheet" href="pc.css" type="text/css">
 </head>
+
 <body>
     <p>Estos son algunos de mis juegos favoritos de ordenador.</p>
     <ol>
-        <li>League of Legends</li>
-        <li>Genshin Impact</li>
+        <li>League of Legends: League of Legends, es un videojuego multijugador de arena de batalla en línea
+            desarrollado.</li>
+        <p>Opinión: No llevo jugando mucho tiempo jugando al League of Legends, pero aun así creo que la jugabilidad del
+            juego podría mejorar bastante. Ya que todavia hay muchos fallos que no se solucionan, junto a una comunidad
+            muy tóxica y de la cual Riot no se encarga. Los gráficos son buenos </p>
+        <div> <img src="C:\Users\usuario03\Documents\videojuegos\sua-loi-critical-error-lol-hinh-6-660x330.jpg"
+                widht="100" height="150" </div>
+            <li>Genshin Impact:Genshin Impact es un videojuego de rol de acción de mundo abierto y gratuito, con una
+                mecánica de monetización de gacha para conseguir elementos adicionales como personajes especiales y
+                armas.
+                <p>Opinión: La jugabilidad de este juego es muy sencilla y divertida de probar. Junto con muchos combos
+                    y habilidades especiales. Los gráficos son muy buenos, aunque si tu pc tiene una calidad media
+                    pueden haber subidas de fp. Haciendo que te den tirones, pero son muy leves.</p>
+            </li>
+            <div> <img src="C:\Users\usuario03\Documents\videojuegos\genshin-impact-1-3-key-art.jpg" widht="100"
+                    height="150" </div>
+
     </ol>
+
+    <div style="text-align: center;">
+        <p><a href="index.html"> Página Principal ♡</a></p>
+    </div>
 </body>
+
 </html>
