--- a/videojuegos/play.html
+++ b/videojuegos/play.html
@@ -6,16 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayStation</title>
+    <link rel="stylesheet" href="play.css" type="text/css">
+
 </head>
 
 <body>
     <p>Estos son algunos de mis juegos favoritos de PlayStation.</p>
     <ol>
-        <li>Howarts Legacy.</li>
-        <li>God of War Ragnarök.</li>
+        <li>Howarts Legacy: Hogwarts Legacy es un videojuego de rol de mundo abierto que se encuentra en desarrollo.
+        </li>
+        <p>Opinión: Este juego todavía no esta disponible, sale en febrero. Pero aun así, los gráficos son buenos, al
+            igual que la jugabilidad. </p>
+        <img src="C:\Users\usuario03\Documents\videojuegos\hogw01-1024x576.jpg" widht="100" height="150">
+        <li>God of War Ragnarök: God of War Ragnarök es un videojuego de acción y aventuras</li>
+        <p>Opinión: Los gráficos de God of War Ragnarök a simple vista se ve muy familiar, y siendo el tono de esta
+            reseña y de este juego en general, al fijarse en los detalles podemos ver que los gráficos también están
+            extremadamente mejorados. Por otro lado tenemos, el gameplay, el cual a simple vista parece “lo mismo” que
+            en el juego anterior, Kratos sigue blandiendo su hacha de Leviatán y sus dagas del caos, y si bien, se
+            siente prácticamente igual que en la entrega anterior, el combate esta expandido desde sus raíces.</p>
+        <img src="C:\Users\usuario03\Documents\videojuegos\Bloodborne-Uncharted-God-of-War-y-Ghost-of-Tsushima-estan-de-camino-a-PC-segun-un-insider.jpg"
+            widht="100" height="150">
     </ol>
-    <div style="text-align: center;"> <img src="C:\Users\usuario03\Documents\videojuegos\b151af8c045ff211b344f9e87c7028ca.jpg" widht="500" height="400" </div>
-    
-    </body>
+</body>
+
+<div style="text-align: center;">
+    <p><a href="index.html"> Página Principal ♡</a></p>
+</div>
 
 </html>
