--- a/videojuegos/xbox.html
+++ b/videojuegos/xbox.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="xbox.css" type="text/css">
+
     <title>Xbox</title>
 </head>
+
 <body>
     <p>Estos son algunos de mis juegos favoritos de Xbox.</p>
     <ol>
-        <li>Forza Horizon 5.</li>
-        <li>MechWarrior 5: Mercenaries.</li>
-    </ol>
-    <div style="text-align: center;"> <img src="C:\Users\usuario03\Documents\videojuegos\555-5556133_xbox-logo-png-image-icono-xbox-png-transparent.png" widht="500" height="400" </div>
+        <li>Forza Horizon 5: Forza Horizon es un videojuego de carreras de mundo abierto para los dispositivos</li>
+        <p>Opinión: Forza Horizon 5 es, además, el primer juego de la saga que he podido disfrutar íntegramente y desde
+            el principio a altas resoluciones y 60 frames por segundo en el modo rendimiento, y se nota.</p>
+        <img src="C:\Users\usuario03\Documents\videojuegos\forza-horizon-4-1091.jpeg" widht="100" height="150" </div>
+        <li>MechWarrior 5: Mercenaries: MechWarrior 5: Mercenaries es un juego de mechas de BattleTech</li>
+        <p>Opinión: Los primeros compases del juego son interesantes y espectaculares, y tras no poco esfuerzo para
+            configurar el título correctamente en mi RTX 2080 ti, se nos presenta un combate visceral y crudo pero que
+            parece lleno de posibilidades.</p>
+        <img src="C:\Users\usuario03\Documents\videojuegos\mechwarrior-5-mercenaries-rtx.jpeg" widht="100" height="150"
+            </div>
 </body>
+</ol>
+
+<div style="text-align: center;">
+    <p><a href="index.html"> Página Principal ♡</a></p>
+</div>
+
 </html>
