--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videojuegos</title>
+    <link rel="shortcut icon" href="/icon.png" sizes="128x128">  
+    <link rel="shortcut icon" href="/icon.png" sizes="128x128">
     <link rel="stylesheet" href="estilos.css" type="text/css">
 </head>
 
