--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videojuegos</title>
     <link rel="shortcut icon" href="/icon.png" sizes="128x128">  
-    <link rel="shortcut icon" href="/icon.png" sizes="128x128">
+    <link rel="apple-touch-icon" href="/icon.png">
     <link rel="stylesheet" href="estilos.css" type="text/css">
 </head>
 
