--- a/pc.html
+++ b/pc.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pc</title>
+    <link rel="shortcut icon" href="/icon.png" sizes="128x128">  
+    <link rel="apple-touch-icon" href="/icon.png">
     <link rel="stylesheet" href="pc.css" type="text/css">
 </head>
 
