--- a/xbox.html
+++ b/xbox.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="xbox.css" type="text/css">
-
+    <link rel="shortcut icon" href="/icon.png" sizes="128x128">
+    <link rel="apple-touch-icon" href="/icon.png">
     <title>Xbox</title>
 </head>
 
